--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">BiotSpeechIoT</string>
+    <string name="beschleunigung_x">X:</string>
+    <string name="beschleunigung_y">Y:</string>
+    <string name="beschleunigung_z">Z:</string>
+    <string name="gyro_x">X:</string>
+    <string name="gyro_y">Y:</string>
+    <string name="gyro_z">Z:</string>
+    <string name="magnet_x">X:</string>
+    <string name="magnet_y">Y:</string>
+    <string name="magnet_z">Z:</string>
 </resources>
