Homebutton + Ereignis Ansicht

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="magnet_x">X: %1$.2f</string>
     <string name="magnet_y">Y: %1$.2f</string>
     <string name="magnet_z">Z: %1$.2f</string>
+    <string name="ereignisse_title">Ereignisse</string>
 </resources>
