--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BiotSpeechIoT</string>
+    <string name="gyro">Gyro:</string>
+    <string name="pulse">Pulse:</string>
+    <string name="bewegung">Bewegung:</string>
 </resources>
